SAK-33469 add entries to schema (#5298)
* Remove unused code and cleanup other compiler warnings

* Add rebel.xml to gitignore so that JRebel project config is not committed

* SAK-33469 add entries to grading schema

(cherry picked from commit 28a0e35e53a70e55a27de2864963bc4a6fb202bc)